Dark mode and Spacing fixed

--- a/styles/main.css
+++ b/styles/main.css
@@ -40,23 +40,6 @@ a {
 }
 
 
-@media (prefers-color-scheme: dark) {
-
-  body {
-    background-color: #101010;
-  }
-  .timenite-black {
-    color: #f9f2ed;
-  }
-
-  strong {
-    color: #f9f2ed;
-  }
-
-
-
-
-}
 
 
 .days-left {
@@ -92,6 +75,9 @@ a {
   }
   .days-left-container {
     padding-top: 50px;
+  }
+  .days-left {
+    font-size: 12rem;
 
   }
 }
@@ -114,6 +100,25 @@ a {
 
 
 }
+
+
+
+@media (prefers-color-scheme: dark) {
+
+  body {
+    background-color: #101010;
+  }
+  .timenite-black {
+    color: #f9f2ed;
+  }
+
+  strong {
+    color: #f9f2ed;
+  }
+
+
+}
+
 
 
 
